--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,30 @@
       <scope>provided</scope>
     </dependency>
 
+      <!-- https://mvnrepository.com/artifact/javax/javaee-api -->
+      <dependency>
+          <groupId>javax</groupId>
+          <artifactId>javaee-api</artifactId>
+          <version>8.0</version>
+          <scope>provided</scope>
+      </dependency>
+
+
+      <!-- Import hibernate -->
+      <dependency>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-entitymanager</artifactId>
+          <version>5.4.19.Final</version>
+          <scope>provided</scope>
+      </dependency>
+
+      <dependency>
+          <groupId>org.hibernate</groupId>
+          <artifactId>hibernate-validator</artifactId>
+          <version>6.1.5.Final</version>
+          <scope>provided</scope>
+      </dependency>
+
     <!-- https://mvnrepository.com/artifact/mysql/mysql-connector-java -->
     <dependency>
       <groupId>mysql</groupId>
