--- a/pom.xml
+++ b/pom.xml
@@ -103,6 +103,12 @@
       <version>3.0</version>
     </dependency>
 
+    <!-- https://mvnrepository.com/artifact/javax.jws/javax.jws-api -->
+    <dependency>
+      <groupId>javax.jws</groupId>
+      <artifactId>javax.jws-api</artifactId>
+      <version>1.1</version>
+    </dependency>
 
   </dependencies>
   <build>
@@ -126,6 +132,7 @@
           <debuglevel>lines,vars,source</debuglevel>
         </configuration>
       </plugin>
+
 
     </plugins>
   </build>
